tests/NormalTests/paczka1/fuzzy1/67115961.err
Error in line 1: yK8ht S462 73,8
Error in line 31: 3q61 A3 68,1
Error in line 39: hDDDYRD AR75 71,6
